--- a/pallet_session_validator_management/pallet/dispatchables/index.html
+++ b/pallet_session_validator_management/pallet/dispatchables/index.html
@@ -8,4 +8,4 @@ purposes. To see the real version of each dispatchable, look for them in <a href
 check_inherent uses the same epoch_number as was used to create inherent data.
 Alternative approach would be to put epoch number inside InherentData. However, sidechain
 epoch number is set in Runtime, thus, inherent data provider doesn’t have to know about it.
-On top of that, the latter approach is slightly more complicated to code.</div></li></ul></section></div></main></body></html>
+On top of that, the latter approach is slightly more complicated to code.</div></li><li><div class="item-name"><a class="fn" href="fn.set_main_chain_scripts.html" title="fn pallet_session_validator_management::pallet::dispatchables::set_main_chain_scripts">set_main_chain_scripts</a></div><div class="desc docblock-short">Changes the main chain scripts used for committee rotation.</div></li></ul></section></div></main></body></html>
