deploy: 04f955a0e5aaed39bb90fbd9cd2cb3e7925ab1d3

--- a/src/partner_chains_node/template_chain_spec.rs.html
+++ b/src/partner_chains_node/template_chain_spec.rs.html
@@ -88,7 +88,7 @@
 			params: SidechainParams::read_from_env_with_defaults()<span class="question-mark">?</span>,
 			..Default::default()
 		},
-		polkadot_session_stub_for_grandpa: Default::default(),
+		pallet_session: Default::default(),
 		session_committee_management: SessionCommitteeManagementConfig {
 			<span class="comment">// Same as SessionConfig
 			</span>initial_authorities: <span class="macro">vec!</span>[],
