--- a/src/sidechain_runtime/lib.rs.html
+++ b/src/sidechain_runtime/lib.rs.html
@@ -1543,11 +1543,11 @@
 		</span>Sidechain: pallet_sidechain,
 		SessionCommitteeManagement: pallet_session_validator_management,
 		BlockRewards: pallet_block_rewards,
-		<span class="comment">// pallet_grandpa depends on pallet_session CurrentIndex storage.
+		<span class="comment">// pallet_grandpa reads pallet_session::pallet::CurrentIndex storage.
 		// Only stub implementation of pallet_session should be wired.
-		// Partner Chains session_manager ValidatorManagementSessionManager writes to this storage.
-		// It is wired in by pallet_partner_chains_session.
-		</span>PolkadotSessionStubForGrandpa: pallet_session,
+		// Partner Chains session_manager ValidatorManagementSessionManager writes to pallet_session::pallet::CurrentIndex.
+		// ValidatorManagementSessionManager is wired in by pallet_partner_chains_session.
+		</span>PalletSession: pallet_session,
 		<span class="comment">// The order matters!! pallet_partner_chains_session needs to come last for correct initialization order
 		</span>Session: pallet_partner_chains_session,
 		NativeTokenManagement: pallet_native_token_management,
