--- a/src/partner_chains_node/staging.rs.html
+++ b/src/partner_chains_node/staging.rs.html
@@ -324,7 +324,7 @@
 			params: SidechainParams::read_from_env_with_defaults()<span class="question-mark">?</span>,
 			..Default::default()
 		},
-		polkadot_session_stub_for_grandpa: Default::default(),
+		pallet_session: Default::default(),
 		session_committee_management: SessionCommitteeManagementConfig {
 			initial_authorities: initial_authorities
 				.into_iter()
