--- a/src/partner_chains_node/testnet.rs.html
+++ b/src/partner_chains_node/testnet.rs.html
@@ -404,7 +404,7 @@
 			slots_per_epoch: SlotsPerEpoch::read_from_env()<span class="question-mark">?</span>,
 			..Default::default()
 		},
-		polkadot_session_stub_for_grandpa: Default::default(),
+		pallet_session: Default::default(),
 		session_committee_management: SessionCommitteeManagementConfig {
 			initial_authorities: initial_authorities
 				.into_iter()
