--- a/src/partner_chains_cli/main.rs.html
+++ b/src/partner_chains_cli/main.rs.html
@@ -201,7 +201,7 @@
 ║   3. register2             : complete registration with cold keys              ║
 ║   4. register3             : finalize registration                             ║
 ║   5. start-node            : start the validator node                          ║
-║   6. deregister            : cancels registration                              ║
+║   6. deregister            : cancel registration                               ║
 ║                                                                                ║
 ║   Note: This sequence assumes that the chain-spec.json and                     ║
 ║         partner-chains-cli-chain-config.json files have been obtained from     ║
