deploy: 5bf9f863b8a2e1395686a269cb24d95ffc148ebd

--- a/plutus_datum_derive/index.html
+++ b/plutus_datum_derive/index.html
@@ -3,4 +3,4 @@
 <code>constructor_datum</code> parameter should be used on a single field structs to decide if the field
 should be mapped to datum directly or wrapped in constructor datum with one variant and single
 field. Such distinction is required because exactly same Datum encoding, as in
-https://github.com/input-output-hk/trustless-sidechain, is required.</div></li></ul></section></div></main></body></html>
+<a href="https://github.com/input-output-hk/partner-chains-smart-contracts">https://github.com/input-output-hk/partner-chains-smart-contracts</a>, is required.</div></li></ul></section></div></main></body></html>
