deploy: b4a250bdd6d7999c2425757de02fed14b4fae4c6

--- a/src/partner_chains_node/staging.rs.html
+++ b/src/partner_chains_node/staging.rs.html
@@ -235,7 +235,7 @@
 		AccountId::from_str(<span class="string">"0x22c9f9d51022b7ad2204131e6268ab079c84bcdb44a4c6907affed5779da9c7b"</span>)
 			.unwrap(),
 		staging_sudo_key(),
-		<span class="comment">// SDETs test accounts, keys are in https://github.com/input-output-hk/sidechains-tests/tree/master/secrets
+		<span class="comment">// SDETs test accounts, keys are in E2E-tests/secrets
 		// negative-test
 		</span>AccountId::from_str(<span class="string">"5F1N52dZx48UpXNLtcCzSMHZEroqQDuYKfidg46Tp37SjPcE"</span>).unwrap(),
 		<span class="comment">// faucet-0
