deploy: b0b3bd37d5f34e67cd600339d5ae5d899520fd4e

--- a/src/partner_chains_cli/register/register1.rs.html
+++ b/src/partner_chains_cli/register/register1.rs.html
@@ -1450,7 +1450,7 @@
 				<span class="string">"governance_authority"</span>: <span class="string">"0x00112233445566778899001122334455667788990011223344556677"</span>,
 			},
 			<span class="string">"cardano"</span>: {
-				<span class="string">"network"</span>: <span class="number">2
+				<span class="string">"network"</span>: <span class="string">"testnet"
 			</span>}
 		})
 	}
