--- a/src/partner_chains_cli/register/register3.rs.html
+++ b/src/partner_chains_cli/register/register3.rs.html
@@ -751,7 +751,7 @@
 				<span class="string">"epoch_duration_millis"</span>: <span class="number">86400000</span>,
 				<span class="string">"first_epoch_number"</span>: <span class="number">1</span>,
 				<span class="string">"first_slot_number"</span>: <span class="number">4320</span>,
-				<span class="string">"network"</span>: <span class="number">0
+				<span class="string">"network"</span>: <span class="string">"mainnet"
 			</span>},
 			<span class="string">"cardano_addresses"</span>: {
 				<span class="string">"committee_candidates_address"</span>: <span class="string">"addr_test1wz5qc7fk2pat0058w4zwvkw35ytptej3nuc3je2kgtan5dq3rt4sc"</span>,
