deploy: 2acd3392b1599aba7ba880974ca024a79d757e7c

--- a/src/partner_chains_cli/prepare_configuration/prepare_cardano_params.rs.html
+++ b/src/partner_chains_cli/prepare_configuration/prepare_cardano_params.rs.html
@@ -298,7 +298,7 @@
 			.checked_add(first_epoch_era.start.time_seconds)
 			.and_then(|seconds| seconds.checked_mul(<span class="number">1000</span>))
 			.ok_or_else(|| <span class="macro">anyhow::anyhow!</span>(<span class="string">"First epoch timestamp overflow"</span>))<span class="question-mark">?</span>,
-		network: shelley_config.network.into(),
+		network: shelley_config.network,
 	})
 }
 
