deploy: 183b3192db2cc5ea3cc1362bf729aec5d9e99e8c

--- a/src/partner_chains_cardano_offchain/d_param.rs.html
+++ b/src/partner_chains_cardano_offchain/d_param.rs.html
@@ -959,7 +959,7 @@
 			payment_key_utxos: <span class="macro">vec!</span>[
 				lesser_payment_utxo(),
 				greater_payment_utxo(),
-				make_utxo(<span class="number">11u8</span>, <span class="number">0</span>, <span class="number">100000</span>, <span class="kw-2">&amp;</span>payment_addr()),
+				make_utxo(<span class="number">11u8</span>, <span class="number">0</span>, <span class="number">1000000</span>, <span class="kw-2">&amp;</span>payment_addr()),
 			],
 			network: NetworkIdKind::Testnet,
 			protocol_parameters: protocol_parameters(),
