deploy: 8cbb7e0f036bce0f7dea5a4fade164e99f6c9516

--- a/src/partner_chains_cardano_offchain/permissioned_candidates.rs.html
+++ b/src/partner_chains_cardano_offchain/permissioned_candidates.rs.html
@@ -665,9 +665,7 @@
 <a href="#665" id="665">665</a>
 <a href="#666" id="666">666</a>
 <a href="#667" id="667">667</a>
-<a href="#668" id="668">668</a>
-</pre></div><pre class="rust"><code><span class="attr">#![allow(dead_code)]
-</span><span class="doccomment">//!
+</pre></div><pre class="rust"><code><span class="doccomment">//!
 //! Permissioned candidates are stored on chain in an UTXO at the Permissioned Candidates Validator address.
 //! There should be at most one UTXO at the validator address and it should contain the permissioned candidates list.
 //! This UTXO should have 1 token of the Permissioned Candidates Policy with an empty asset name.
