deploy: f2e90abf4f14313179cd4a7d60a0e91270100779

--- a/src/partner_chains_cardano_offchain/register.rs.html
+++ b/src/partner_chains_cardano_offchain/register.rs.html
@@ -923,8 +923,8 @@
 				pub_key: test_values::mainchain_pub_key(),
 				signature: MainchainSignature(Vec::new()),
 			},
-			partnerchain_pub_key: SidechainPublicKey(Vec::new()),
-			partnerchain_signature: SidechainSignature(Vec::new()),
+			partner_chain_pub_key: SidechainPublicKey(Vec::new()),
+			partner_chain_signature: SidechainSignature(Vec::new()),
 			registration_utxo,
 			own_pkh: own_pkh(),
 			aura_pub_key: AuraPublicKey(Vec::new()),
