--- a/src/partner_chains_plutus_data/registered_candidates.rs.html
+++ b/src/partner_chains_plutus_data/registered_candidates.rs.html
@@ -435,8 +435,8 @@
 ) -&gt; PlutusData {
 	RegisterValidatorDatum::V0 {
 		stake_ownership: candidate_registration.stake_ownership.clone(),
-		sidechain_pub_key: candidate_registration.partnerchain_pub_key.clone(),
-		sidechain_signature: candidate_registration.partnerchain_signature.clone(),
+		sidechain_pub_key: candidate_registration.partner_chain_pub_key.clone(),
+		sidechain_signature: candidate_registration.partner_chain_signature.clone(),
 		registration_utxo: candidate_registration.registration_utxo,
 		own_pkh: candidate_registration.own_pkh,
 		aura_pub_key: candidate_registration.aura_pub_key.clone(),
@@ -458,8 +458,8 @@
 				grandpa_pub_key,
 			} =&gt; CandidateRegistration {
 				stake_ownership,
-				partnerchain_pub_key: sidechain_pub_key,
-				partnerchain_signature: sidechain_signature,
+				partner_chain_pub_key: sidechain_pub_key,
+				partner_chain_signature: sidechain_signature,
 				registration_utxo,
 				own_pkh,
 				aura_pub_key,
