--- a/partner_chains_cardano_offchain/reserve/create/fn.create_reserve_utxo.html
+++ b/partner_chains_cardano_offchain/reserve/create/fn.create_reserve_utxo.html
@@ -4,4 +4,4 @@
     payment_key: [<a class="primitive" href="https://doc.rust-lang.org/1.81.0/std/primitive.u8.html">u8</a>; <a class="primitive" href="https://doc.rust-lang.org/1.81.0/std/primitive.array.html">32</a>],
     client: <a class="primitive" href="https://doc.rust-lang.org/1.81.0/std/primitive.reference.html">&amp;T</a>,
     await_tx: <a class="primitive" href="https://doc.rust-lang.org/1.81.0/std/primitive.reference.html">&amp;A</a>,
-) -&gt; <a class="type" href="https://docs.rs/anyhow/1.0.85/anyhow/type.Result.html" title="type anyhow::Result">Result</a>&lt;<a class="enum" href="https://doc.rust-lang.org/1.81.0/core/option/enum.Option.html" title="enum core::option::Option">Option</a>&lt;McTxHash&gt;&gt;</code></pre></section></div></main></body></html>
+) -&gt; <a class="type" href="https://docs.rs/anyhow/1.0.85/anyhow/type.Result.html" title="type anyhow::Result">Result</a>&lt;McTxHash&gt;</code></pre></section></div></main></body></html>
