deploy: 57d006edeb5326b0a6587ab76918136d276f1d2a

--- a/src/partner_chains_cardano_offchain/reserve/create.rs.html
+++ b/src/partner_chains_cardano_offchain/reserve/create.rs.html
@@ -234,7 +234,7 @@
 	await_tx::AwaitTx,
 	csl::{
 		empty_asset_name, get_builder_config, get_validator_budgets, zero_ex_units, OgmiosUtxoExt,
-		TransactionBuilderExt, TransactionContext, UtxoIdExt,
+		TransactionBuilderExt, TransactionContext,
 	},
 	init_governance::{get_governance_data, GovernanceData},
 	reserve::get_reserve_data,
