deploy: 04f493733ad19633f11555f267b5f3756eea040f

--- a/partner_chains_cardano_offchain/reserve/create/index.html
+++ b/partner_chains_cardano_offchain/reserve/create/index.html
@@ -14,7 +14,7 @@
 <li>Reserve Validator output that:</li>
 <li>
 <ul>
-<li>has Reward Tokens</li>
+<li>has Reward Tokens and minted Reserve Auth Policy Token</li>
 </ul>
 </li>
 <li>
