deploy: 7f3aa6f20ddbe04be5063bf562f5ed5b1fd14f03

--- a/src/partner_chains_cli/register/register3.rs.html
+++ b/src/partner_chains_cli/register/register3.rs.html
@@ -851,7 +851,7 @@
 			},
 			partner_chain_pub_key: SidechainPublicKey(<span class="macro">hex!</span>(<span class="string">"020a1091341fe5664bfa1782d5e04779689068c916b04cb365ec3153755684d9a1"</span>).to_vec()),
 			partner_chain_signature: SidechainSignature(<span class="macro">hex!</span>(<span class="string">"cb6df9de1efca7a3998a8ead4e02159d5fa99c3e0d4fd6432667390bb4726854"</span>).to_vec()),
-			own_pkh: MainchainAddressHash(<span class="macro">hex!</span>(<span class="string">"7fa48bb8fb5d6804fad26237738ce490d849e4567161e38ab8415ff3"</span>)),
+			own_pkh: MainchainKeyHash(<span class="macro">hex!</span>(<span class="string">"7fa48bb8fb5d6804fad26237738ce490d849e4567161e38ab8415ff3"</span>)),
 			registration_utxo: UtxoId { tx_hash: McTxHash(<span class="macro">hex!</span>(<span class="string">"cdefe62b0a0016c2ccf8124d7dda71f6865283667850cc7b471f761d2bc1eb13"</span>)), index: UtxoIndex(<span class="number">0</span>) },
 			aura_pub_key: AuraPublicKey(<span class="macro">hex!</span>(<span class="string">"79c3b7fc0b7697b9414cb87adcb37317d1cab32818ae18c0e97ad76395d1fdcf"</span>).to_vec()),
 			grandpa_pub_key: GrandpaPublicKey(<span class="macro">hex!</span>(<span class="string">"1a55db596380bc63f5ee964565359b5ea8e0096c798c3281692df097abbd9aa4b657f887915ad2a52fc85c674ef4044baeaf7149546af93a2744c379b9798f07"</span>).to_vec())
