deploy: ea29b2da04be5a8c916d415f3f7f26888825a193

--- a/src/partner_chains_cli/lib.rs.html
+++ b/src/partner_chains_cli/lib.rs.html
@@ -206,7 +206,7 @@
 ║   6. deregister            : cancel registration                               ║
 ║                                                                                ║
 ║   Note: This sequence assumes that the chain-spec.json and                     ║
-║         partner-chains-cli-chain-config.json files have been obtained from     ║
+║         pc-chain-config.json files have been obtained from                     ║
 ║         the Governance Authority and are present in the working directory.     ║
 ╟────────────────────────────────────────────────────────────────────────────────╢
 ║ Permissioned Validator:                                                        ║
@@ -217,7 +217,7 @@
 ║         with the Governance Authority. The 'start-node' command can only be    ║
 ║         executed after the Governance Authority has established the partner    ║
 ║         chain on the main network. This sequence assumes that the              ║
-║         chain-spec.json and partner-chains-cli-chain-config.json files have    ║
+║         chain-spec.json and pc-chain-config.json files have                    ║
 ║         been obtained from the Governance Authority and are present in the     ║
 ║         working directory.                                                     ║
 ╚════════════════════════════════════════════════════════════════════════════════╝
