--- a/src/partner_chains_node/testnet.rs.html
+++ b/src/partner_chains_node/testnet.rs.html
@@ -263,7 +263,7 @@
 					<span class="string">"0x8eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a48"</span>,
 				)
 				.unwrap(),
-				<span class="comment">// SDETs test accounts, keys are in E2E-tests/secrets
+				<span class="comment">// SDETs test accounts, keys are in e2e-tests/secrets
 				// negative-test
 				</span>AccountId::from_str(<span class="string">"5F1N52dZx48UpXNLtcCzSMHZEroqQDuYKfidg46Tp37SjPcE"</span>).unwrap(),
 			],
@@ -338,7 +338,7 @@
 		AccountId::from_str(<span class="string">"0x9cedc9f7b926191f64d68ee77dd90c834f0e73c0f53855d77d3b0517041d5640"</span>)
 			.unwrap(),
 		testnet_sudo_key(),
-		<span class="comment">// SDETs test accounts, keys are in E2E-tests/secrets
+		<span class="comment">// SDETs test accounts, keys are in e2e-tests/secrets
 		// negative-test
 		</span>AccountId::from_str(<span class="string">"5F1N52dZx48UpXNLtcCzSMHZEroqQDuYKfidg46Tp37SjPcE"</span>).unwrap(),
 	]
