--- a/src/partner_chains_cardano_offchain/register.rs.html
+++ b/src/partner_chains_cardano_offchain/register.rs.html
@@ -870,7 +870,7 @@
 		CandidateRegistration {
 			stake_ownership: AdaBasedStaking {
 				pub_key: test_values::mainchain_pub_key(),
-				signature: MainchainSignature(Vec::new()),
+				signature: MainchainSignature([<span class="number">0u8</span>; <span class="number">64</span>]),
 			},
 			partner_chain_pub_key: SidechainPublicKey(Vec::new()),
 			partner_chain_signature: SidechainSignature(Vec::new()),
