--- a/src/partner_chains_cli/prepare_configuration/prepare_main_chain_config.rs.html
+++ b/src/partner_chains_cli/prepare_configuration/prepare_main_chain_config.rs.html
@@ -574,7 +574,7 @@ After setting up the permissioned candidates, execute the 'create-chain-spec' co
 				<span class="string">"first_slot_number"</span>: PREPROD_CARDANO_PARAMS.first_slot_number,
 				<span class="string">"epoch_duration_millis"</span>: PREPROD_CARDANO_PARAMS.epoch_duration_millis,
 				<span class="string">"first_epoch_timestamp_millis"</span>: PREPROD_CARDANO_PARAMS.first_epoch_timestamp_millis,
-				<span class="string">"slot_duration_millis"</span>: PREPROD_CARDANO_PARAMS.main_chain_slot_duration_millis
+				<span class="string">"slot_duration_millis"</span>: PREPROD_CARDANO_PARAMS.slot_duration_millis
 			},
 			<span class="string">"cardano_addresses"</span>: {
 				<span class="string">"committee_candidates_address"</span>: TEST_COMMITTEE_CANDIDATES_ADDRESS,
