--- a/src/partner_chains_cli/register/register3.rs.html
+++ b/src/partner_chains_cli/register/register3.rs.html
@@ -777,7 +777,7 @@
 				<span class="string">"epoch_duration_millis"</span>: <span class="number">86400000</span>,
 				<span class="string">"first_epoch_number"</span>: <span class="number">1</span>,
 				<span class="string">"first_slot_number"</span>: <span class="number">4320</span>,
-				<span class="string">"main_chain_slot_duration_millis"</span>: <span class="number">1000</span>,
+				<span class="string">"slot_duration_millis"</span>: <span class="number">1000</span>,
 				<span class="string">"network"</span>: <span class="string">"mainnet"
 			</span>},
 			<span class="string">"cardano_addresses"</span>: {
