--- a/src/partner_chains_cardano_offchain/reserve/deposit.rs.html
+++ b/src/partner_chains_cardano_offchain/reserve/deposit.rs.html
@@ -169,7 +169,7 @@
 	cardano_keys::CardanoPaymentSigningKey,
 	csl::{
 		get_builder_config, CostStore, Costs, MultiAssetExt, OgmiosUtxoExt, TransactionBuilderExt,
-		TransactionContext, TransactionOutputAmountBuilderExt,
+		TransactionContext, TransactionExt, TransactionOutputAmountBuilderExt,
 	},
 	governance::GovernanceData,
 	scripts_data::ReserveScripts,
@@ -257,9 +257,9 @@
 	)<span class="question-mark">?</span>);
 
 	tx_builder.add_mint_one_script_token_using_reference_script(
-		<span class="kw-2">&amp;</span>governance.policy_script,
+		<span class="kw-2">&amp;</span>governance.policy.script(),
 		<span class="kw-2">&amp;</span>governance.utxo_id_as_tx_input(),
-		<span class="kw-2">&amp;</span>costs.get_mint(<span class="kw-2">&amp;</span>governance.policy_script),
+		<span class="kw-2">&amp;</span>costs,
 	)<span class="question-mark">?</span>;
 
 	tx_builder.add_script_reference_input(
@@ -270,7 +270,7 @@
 		<span class="kw-2">&amp;</span>reserve.illiquid_circulation_supply_validator_version_utxo.to_csl_tx_input(),
 		reserve.scripts.illiquid_circulation_supply_validator.bytes.len(),
 	);
-	<span class="prelude-val">Ok</span>(tx_builder.balance_update_and_build(ctx)<span class="question-mark">?</span>)
+	<span class="prelude-val">Ok</span>(tx_builder.balance_update_and_build(ctx)<span class="question-mark">?</span>.remove_native_script_witnesses())
 }
 
 <span class="comment">// Creates output with reserve token and updated deposit
