--- a/src/partner_chains_cardano_offchain/reserve/update_settings.rs.html
+++ b/src/partner_chains_cardano_offchain/reserve/update_settings.rs.html
@@ -266,9 +266,9 @@
 	}
 
 	tx_builder.add_mint_one_script_token_using_reference_script(
-		<span class="kw-2">&amp;</span>governance.policy_script,
+		<span class="kw-2">&amp;</span>governance.policy.script(),
 		<span class="kw-2">&amp;</span>governance.utxo_id_as_tx_input(),
-		<span class="kw-2">&amp;</span>costs.get_mint(<span class="kw-2">&amp;</span>governance.policy_script),
+		<span class="kw-2">&amp;</span>costs,
 	)<span class="question-mark">?</span>;
 	tx_builder.add_script_reference_input(
 		<span class="kw-2">&amp;</span>reserve.illiquid_circulation_supply_validator_version_utxo.to_csl_tx_input(),
@@ -278,6 +278,6 @@
 		<span class="kw-2">&amp;</span>reserve.auth_policy_version_utxo.to_csl_tx_input(),
 		reserve.scripts.auth_policy.bytes.len(),
 	);
-	<span class="prelude-val">Ok</span>(tx_builder.balance_update_and_build(ctx)<span class="question-mark">?</span>)
+	<span class="prelude-val">Ok</span>(tx_builder.balance_update_and_build(ctx)<span class="question-mark">?</span>.remove_native_script_witnesses())
 }
 </code></pre></div></section></main></body></html>
