--- a/src/partner_chains_cardano_offchain/reserve/init.rs.html
+++ b/src/partner_chains_cardano_offchain/reserve/init.rs.html
@@ -458,6 +458,7 @@
 <a href="#458" id="458">458</a>
 <a href="#459" id="459">459</a>
 <a href="#460" id="460">460</a>
+<a href="#461" id="461">461</a>
 </pre></div><pre class="rust"><code><span class="doccomment">//! Initialization of the reserve management is execution of three similar transaction to
 //! initialize three scripts: Rerserve Management Validator, Reserve Management Policy and
 //! Illiquid Circulation Supply Validator.
@@ -895,6 +896,7 @@
 			payment_key_utxos: <span class="macro">vec!</span>[make_utxo(<span class="number">121u8</span>, <span class="number">3</span>, <span class="number">996272387</span>, <span class="kw-2">&amp;</span>payment_addr())],
 			network: NetworkIdKind::Testnet,
 			protocol_parameters: protocol_parameters(),
+			change_address: payment_addr(),
 		}
 	}
 
