--- a/src/partner_chains_cardano_offchain/reserve/init.rs.html
+++ b/src/partner_chains_cardano_offchain/reserve/init.rs.html
@@ -623,7 +623,7 @@
 			<span class="kw-2">&amp;</span>version_oracle.policy,
 			<span class="kw-2">&amp;</span>version_oracle_asset_name(),
 			<span class="kw-2">&amp;</span>witness,
-			<span class="kw-2">&amp;</span>costs.get_mint(<span class="kw-2">&amp;</span>version_oracle.policy.clone().into()),
+			<span class="kw-2">&amp;</span>costs.get_mint(<span class="kw-2">&amp;</span>version_oracle.policy.clone()),
 		)<span class="question-mark">?</span>;
 	}
 	{
