--- a/src/partner_chains_cardano_offchain/update_governance/mod.rs.html
+++ b/src/partner_chains_cardano_offchain/update_governance/mod.rs.html
@@ -158,7 +158,7 @@
 	T: QueryLedgerState + Transactions + QueryNetwork + QueryUtxoByUtxoId,
 	A: AwaitTx,
 &gt;(
-	new_governance_authority: <span class="kw-2">&amp;</span>Vec&lt;MainchainKeyHash&gt;,
+	new_governance_authority: <span class="kw-2">&amp;</span>[MainchainKeyHash],
 	new_governance_threshold: u8,
 	payment_key: <span class="kw-2">&amp;</span>CardanoPaymentSigningKey,
 	genesis_utxo_id: UtxoId,
@@ -194,7 +194,7 @@
 	version_oracle_validator: <span class="kw-2">&amp;</span>[u8],
 	version_oracle_policy: <span class="kw-2">&amp;</span>[u8],
 	genesis_utxo: UtxoId,
-	new_governance_authority: <span class="kw-2">&amp;</span>Vec&lt;MainchainKeyHash&gt;,
+	new_governance_authority: <span class="kw-2">&amp;</span>[MainchainKeyHash],
 	new_governance_threshold: u8,
 	governance_data: <span class="kw-2">&amp;</span>GovernanceData,
 	costs: Costs,
