--- a/src/partner_chains_cardano_offchain/reserve/handover.rs.html
+++ b/src/partner_chains_cardano_offchain/reserve/handover.rs.html
@@ -213,7 +213,7 @@
 
 	submit_or_create_tx_to_sign(
 		<span class="kw-2">&amp;</span>governance,
-		<span class="kw-2">&amp;</span>ctx,
+		ctx,
 		|costs, ctx| build_tx(<span class="kw-2">&amp;</span>amount, utxo, <span class="kw-2">&amp;</span>reserve, <span class="kw-2">&amp;</span>governance, costs, <span class="kw-2">&amp;</span>ctx),
 		<span class="string">"Handover Reserve"</span>,
 		client,
