--- a/src/partner_chains_cardano_offchain/reserve/init.rs.html
+++ b/src/partner_chains_cardano_offchain/reserve/init.rs.html
@@ -568,7 +568,7 @@
 	<span class="prelude-val">Ok</span>(<span class="prelude-val">Some</span>(
 		submit_or_create_tx_to_sign(
 			<span class="kw-2">&amp;</span>governance,
-			<span class="kw-2">&amp;</span>payment_ctx,
+			payment_ctx,
 			|costs, ctx| init_script_tx(<span class="kw-2">&amp;</span>script, <span class="kw-2">&amp;</span>governance, <span class="kw-2">&amp;</span>version_oracle, costs, <span class="kw-2">&amp;</span>ctx),
 			<span class="string">"Init Reserve Management"</span>,
 			client,
