--- a/src/partner_chains_cardano_offchain/reserve/update_settings.rs.html
+++ b/src/partner_chains_cardano_offchain/reserve/update_settings.rs.html
@@ -204,7 +204,7 @@
 	<span class="prelude-val">Ok</span>(<span class="prelude-val">Some</span>(
 		submit_or_create_tx_to_sign(
 			<span class="kw-2">&amp;</span>governance,
-			<span class="kw-2">&amp;</span>ctx,
+			ctx,
 			|costs, ctx| {
 				update_reserve_settings_tx(
 					<span class="kw-2">&amp;</span>reserve_datum,
