--- a/partner_chains_cardano_offchain/init_governance/trait.InitGovernance.html
+++ b/partner_chains_cardano_offchain/init_governance/trait.InitGovernance.html
@@ -2,13 +2,13 @@
     // Required method
     async fn <a href="#tymethod.init_governance" class="fn">init_governance</a>(
         &amp;self,
-        governance_authority: MainchainKeyHash,
+        governance_parameters: &amp;<a class="struct" href="../governance/struct.MultiSigParameters.html" title="struct partner_chains_cardano_offchain::governance::MultiSigParameters">MultiSigParameters</a>,
         payment_key: &amp;<a class="struct" href="../cardano_keys/struct.CardanoPaymentSigningKey.html" title="struct partner_chains_cardano_offchain::cardano_keys::CardanoPaymentSigningKey">CardanoPaymentSigningKey</a>,
         genesis_utxo_id: UtxoId,
     ) -&gt; <a class="enum" href="https://doc.rust-lang.org/1.81.0/core/result/enum.Result.html" title="enum core::result::Result">Result</a>&lt;McTxHash, <a class="enum" href="../enum.OffchainError.html" title="enum partner_chains_cardano_offchain::OffchainError">OffchainError</a>&gt;;
 }</code></pre><h2 id="required-methods" class="section-header">Required Methods<a href="#required-methods" class="anchor">§</a></h2><div class="methods"><details class="toggle method-toggle" open><summary><section id="tymethod.init_governance" class="method"><a class="src rightside" href="../../src/partner_chains_cardano_offchain/init_governance/mod.rs.html#26-31">source</a><h4 class="code-header">async fn <a href="#tymethod.init_governance" class="fn">init_governance</a>(
     &amp;self,
-    governance_authority: MainchainKeyHash,
+    governance_parameters: &amp;<a class="struct" href="../governance/struct.MultiSigParameters.html" title="struct partner_chains_cardano_offchain::governance::MultiSigParameters">MultiSigParameters</a>,
     payment_key: &amp;<a class="struct" href="../cardano_keys/struct.CardanoPaymentSigningKey.html" title="struct partner_chains_cardano_offchain::cardano_keys::CardanoPaymentSigningKey">CardanoPaymentSigningKey</a>,
     genesis_utxo_id: UtxoId,
 ) -&gt; <a class="enum" href="https://doc.rust-lang.org/1.81.0/core/result/enum.Result.html" title="enum core::result::Result">Result</a>&lt;McTxHash, <a class="enum" href="../enum.OffchainError.html" title="enum partner_chains_cardano_offchain::OffchainError">OffchainError</a>&gt;</h4></section></summary><div class="docblock"><p>Initializes goveranance mechanism with the authority being <code>governance_authority</code>,
