--- a/src/partner_chains_cardano_offchain/reserve/create.rs.html
+++ b/src/partner_chains_cardano_offchain/reserve/create.rs.html
@@ -196,7 +196,7 @@
 
 	submit_or_create_tx_to_sign(
 		<span class="kw-2">&amp;</span>governance,
-		<span class="kw-2">&amp;</span>payment_ctx,
+		payment_ctx,
 		|costs, ctx| create_reserve_tx(<span class="kw-2">&amp;</span>parameters, <span class="kw-2">&amp;</span>reserve, <span class="kw-2">&amp;</span>governance, costs, <span class="kw-2">&amp;</span>ctx),
 		<span class="string">"Create Reserve"</span>,
 		client,
