deploy: 0294ea511d15cca25848e05d84fd286f66d773f5

--- a/src/partner_chains_cardano_offchain/governed_map/mod.rs.html
+++ b/src/partner_chains_cardano_offchain/governed_map/mod.rs.html
@@ -271,7 +271,7 @@
 <a href=#271 id=271 data-nosnippet>271</a>		inputs.add_script_utxo_input(
 <a href=#272 id=272 data-nosnippet>272</a>			utxo,
 <a href=#273 id=273 data-nosnippet>273</a>			validator,
-<a href=#274 id=274 data-nosnippet>274</a>			<span class="kw-2">&amp;</span>PlutusData::new_bytes(<span class="macro">vec!</span>[]),
+<a href=#274 id=274 data-nosnippet>274</a>			<span class="kw-2">&amp;</span>unit_plutus_data(),
 <a href=#275 id=275 data-nosnippet>275</a>			<span class="kw-2">&amp;</span>costs.get_spend(<span class="kw-2">*</span>spend_indicies.get(ix).unwrap_or(<span class="kw-2">&amp;</span><span class="number">0</span>)),
 <a href=#276 id=276 data-nosnippet>276</a>		)<span class="question-mark">?</span>;
 <a href=#277 id=277 data-nosnippet>277</a>	}
