--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv=refresh content=0;url=node_template/index.html>
+<meta http-equiv=refresh content=0;url=partner_chains_demo_node/index.html>
