--- a/src/sidechain_mc_hash/lib.rs.html
+++ b/src/sidechain_mc_hash/lib.rs.html
@@ -114,7 +114,7 @@
 <a href=#114 id=114 data-nosnippet>114</a>	<span class="doccomment">/// Creates a new [McHashInherentDataProvider] for proposing a new Partner Chain block by querying the
 <a href=#115 id=115 data-nosnippet>115</a>	/// current state of Cardano and returning an instance referencing the latest stable block there.
 <a href=#116 id=116 data-nosnippet>116</a>	///
-<a href=#117 id=117 data-nosnippet>117</a>	/// # Argumens
+<a href=#117 id=117 data-nosnippet>117</a>	/// # Arguments
 <a href=#118 id=118 data-nosnippet>118</a>	/// - `parent_header`: header of the parent of the block being produced
 <a href=#119 id=119 data-nosnippet>119</a>	/// - `data_source`: data source implementing [McHashDataSource]
 <a href=#120 id=120 data-nosnippet>120</a>	/// - `slot`: current Partner Chain slot
@@ -163,7 +163,7 @@
 <a href=#163 id=163 data-nosnippet>163</a>
 <a href=#164 id=164 data-nosnippet>164</a>	<span class="doccomment">/// Verifies a Cardano reference hash and creates a new [McHashInherentDataProvider] for an imported Partner Chain block.
 <a href=#165 id=165 data-nosnippet>165</a>	///
-<a href=#166 id=166 data-nosnippet>166</a>	/// # Argumens
+<a href=#166 id=166 data-nosnippet>166</a>	/// # Arguments
 <a href=#167 id=167 data-nosnippet>167</a>	/// - `parent_header`: header of the parent of the block being produced or validated
 <a href=#168 id=168 data-nosnippet>168</a>	/// - `parent_slot`: slot of the parent block. [None] for genesis
 <a href=#169 id=169 data-nosnippet>169</a>	/// - `verified_block_slot`: Partner Chain slot of the block being verified
