deploy: d2287607063e5b79546e200f8f9e8ce4678bbe7b

--- a/src/partner_chains_demo_node/staging.rs.html
+++ b/src/partner_chains_demo_node/staging.rs.html
@@ -150,7 +150,7 @@
 <a href=#150 id=150 data-nosnippet>150</a>			main_chain_scripts: sp_session_validator_management::MainChainScripts::read_from_env()<span class="question-mark">?</span>,
 <a href=#151 id=151 data-nosnippet>151</a>		},
 <a href=#152 id=152 data-nosnippet>152</a>		native_token_management: NativeTokenManagementConfig {
-<a href=#153 id=153 data-nosnippet>153</a>			main_chain_scripts: sp_native_token_management::MainChainScripts::read_from_env()<span class="question-mark">?</span>,
+<a href=#153 id=153 data-nosnippet>153</a>			main_chain_scripts: <span class="prelude-val">Some</span>(sp_native_token_management::MainChainScripts::read_from_env()<span class="question-mark">?</span>),
 <a href=#154 id=154 data-nosnippet>154</a>			..Default::default()
 <a href=#155 id=155 data-nosnippet>155</a>		},
 <a href=#156 id=156 data-nosnippet>156</a>		governed_map: GovernedMapConfig {
