--- a/src/partner_chains_demo_node/template_chain_spec.rs.html
+++ b/src/partner_chains_demo_node/template_chain_spec.rs.html
@@ -40,7 +40,7 @@
 <a href=#40 id=40 data-nosnippet>40</a>			main_chain_scripts: sp_session_validator_management::MainChainScripts::read_from_env()<span class="question-mark">?</span>,
 <a href=#41 id=41 data-nosnippet>41</a>		},
 <a href=#42 id=42 data-nosnippet>42</a>		native_token_management: NativeTokenManagementConfig {
-<a href=#43 id=43 data-nosnippet>43</a>			main_chain_scripts: sp_native_token_management::MainChainScripts::read_from_env()<span class="question-mark">?</span>,
+<a href=#43 id=43 data-nosnippet>43</a>			main_chain_scripts: <span class="prelude-val">Some</span>(sp_native_token_management::MainChainScripts::read_from_env()<span class="question-mark">?</span>),
 <a href=#44 id=44 data-nosnippet>44</a>			..Default::default()
 <a href=#45 id=45 data-nosnippet>45</a>		},
 <a href=#46 id=46 data-nosnippet>46</a>		governed_map: GovernedMapConfig {
