--- a/src/partner_chains_demo_node/testnet.rs.html
+++ b/src/partner_chains_demo_node/testnet.rs.html
@@ -202,7 +202,7 @@
 <a href=#202 id=202 data-nosnippet>202</a>			main_chain_scripts: sp_session_validator_management::MainChainScripts::read_from_env()<span class="question-mark">?</span>,
 <a href=#203 id=203 data-nosnippet>203</a>		},
 <a href=#204 id=204 data-nosnippet>204</a>		native_token_management: NativeTokenManagementConfig {
-<a href=#205 id=205 data-nosnippet>205</a>			main_chain_scripts: sp_native_token_management::MainChainScripts::read_from_env()<span class="question-mark">?</span>,
+<a href=#205 id=205 data-nosnippet>205</a>			main_chain_scripts: <span class="prelude-val">Some</span>(sp_native_token_management::MainChainScripts::read_from_env()<span class="question-mark">?</span>),
 <a href=#206 id=206 data-nosnippet>206</a>			..Default::default()
 <a href=#207 id=207 data-nosnippet>207</a>		},
 <a href=#208 id=208 data-nosnippet>208</a>		governed_map: GovernedMapConfig {
